--- a/m1/u2/a10/brendadosanjos/@content/index.html
+++ b/m1/u2/a10/brendadosanjos/@content/index.html
@@ -43,22 +43,22 @@
           class="header__form"
           action="/search"
         >
-          <label>
+          <!-- <label>
             <input
               class="text-tertiary"
               type="text"
               placeholder="Pesquisar produto..."
               required
             >
-          </label>
-          <button>
+          </label> -->
+          <!-- <button>
             <img
               src="assets/images/search.png"
               alt="search"
             >
-          </button>
+          </button> -->
         </form>
-        <div class="header__actions">
+        <!-- <div class="header__actions">
           <a
             href="javascript:void(0);"
             class="text-tertiary"
@@ -66,7 +66,7 @@
             Cadastre-se
           </a>
           <button style="width: 100px;">Entrar</button>
-        </div>
+        </div> -->
       </div>
     </header>
     <main>
